--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,15 @@
 .read-the-docs {
   color: #888;
 }
+.card{
+  border: 2px solid gold;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 20px;
+}
+.player{
+  border: 2px solid greenyellow;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 20px;
+}
